kodlar temizlendi birkaç bug ve buton eklendi

--- a/erzurumevleri.html
+++ b/erzurumevleri.html
@@ -4,10 +4,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 
-    <link rel="stylesheet" href="place.css" />
+    <link rel="stylesheet" href="css/place.css"" />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      href="css/fas.css"
     />
   </head>
 
@@ -15,7 +15,12 @@
     <nav>
       <div class="logo">
         <ul>
-          <i class="fas fa-hamburger"></i>
+          <i
+            class="fa-solid fa-chevron-left space-right cursor"
+            onclick="javascript:location.href='/index.html'" title="Geri dön"
+          ></i>
+
+          <i class="fas fa-hamburger icon-logo"></i>
           <p>Menü Görmeden</p>
         </ul>
       </div>
