--- a/emirseyh.html
+++ b/emirseyh.html
@@ -3,18 +3,21 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-    <link rel="stylesheet" href="place.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-    />
+    <link rel="stylesheet" href="css/place.css"" />
+    <link rel="stylesheet" href="css/fas.css" />
   </head>
 
   <body>
     <nav>
       <div class="logo">
         <ul>
-          <i class="fas fa-hamburger"></i>
+          <i
+            class="fa-solid fa-chevron-left space-right cursor"
+            onclick="javascript:location.href='/index.html'"
+            title="Geri dön"
+          ></i>
+
+          <i class="fas fa-hamburger icon-logo"></i>
           <p>Menü Görmeden</p>
         </ul>
       </div>
@@ -44,7 +47,9 @@
           <span>Görmek</span>
           <span> için tıkla </span>
           <br />
-          <button style="background-image: url('imgs/emirseyhmenu.png');"></button>
+          <button
+            style="background-image: url('imgs/emirseyhmenu.png')"
+          ></button>
         </div>
         <div class="point">
           <div class="point-num">
