yorumlara başlık eklendi

--- a/erzurumevleri.html
+++ b/erzurumevleri.html
@@ -5,10 +5,7 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 
     <link rel="stylesheet" href="css/place.css"" />
-    <link
-      rel="stylesheet"
-      href="css/fas.css"
-    />
+    <link rel="stylesheet" href="css/fas.css" />
   </head>
 
   <body>
@@ -17,7 +14,8 @@
         <ul>
           <i
             class="fa-solid fa-chevron-left space-right cursor"
-            onclick="javascript:location.href='/index.html'" title="Geri dön"
+            onclick="javascript:location.href='/index.html'"
+            title="Geri dön"
           ></i>
 
           <i class="fas fa-hamburger icon-logo"></i>
@@ -115,6 +113,9 @@
       <hr />
       <div class="comment-list">
         <ul>
+          <div class="comment-list-header">
+            <h3>Yorumlar</h3>
+          </div>
           <div class="comment">
             <div class="comment-header">
               <img src="imgs/160.png" alt="" class="circle-avatar" />
