--- a/emirseyh.html
+++ b/emirseyh.html
@@ -119,6 +119,9 @@
       <hr />
       <div class="comment-list">
         <ul>
+          <div class="comment-list-header">
+            <h3>Yorumlar</h3>
+          </div>
           <div class="comment">
             <div class="comment-header">
               <img src="imgs/150.jpeg" alt="" class="circle-avatar" />
