--- a/guzelyurt.html
+++ b/guzelyurt.html
@@ -114,6 +114,10 @@
       <hr />
       <div class="comment-list">
         <ul>
+          <div class="comment-list-header">
+            <h3>Yorumlar</h3>
+          </div>
+
           <div class="comment">
             <div class="comment-header">
               <img src="imgs/153.png" alt="" class="circle-avatar" />
