--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-   <link rel="stylesheet" href="css/login.css">
-   <link rel="stylesheet" href="css/style.css">
-    <link
-      rel="stylesheet"
-      href="css/fas.css"
-    />
+   <style>
+    @import url(css/fas.css);
+    @import url(css/style.css);
+    @import url(css/login.css);
+   </style>
   </head>
   <body>
 
