--- a/erzurumevleri.html
+++ b/erzurumevleri.html
@@ -4,8 +4,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 
-    <link rel="stylesheet" href="css/place.css"" />
-    <link rel="stylesheet" href="css/fas.css" />
+    <style>
+      @import url(css/fas.css);
+      @import url(css/place.css);
+    </style>
   </head>
 
   <body>
