--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
 
-    <button id="#back" class="back-to-top" onclick="scrollFunction()">
+    <button id="back" class="back-to-top" onclick="scrollFunction()">
       <i class="fas fa-angle-up"></i>
     </button>
     <nav>
