--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ class="close" title="Kapat">&times;</span>
       <input type="password" placeholder="Şifreni gir" id="psw" required>
       <br>
 
-      <button type="submit" onclick="login()">Giriş</button>
+      <button type="submit" class="raise" onclick="login()">Giriş Yap</button>
      
     </div>
 
@@ -162,7 +162,7 @@ class="close" title="Kapat"">&times;</span>
       <label for="psw"><b>Şifre</b></label>
       <input type="password" placeholder="Şifreni gir" id="pswr" required>
       <br>
-      <button type="submit" onclick="register()">Kayıt</button>
+      <button type="submit" class="raise" onclick="register()">Kayıt Ol</button>
      
     </div>
 
