--- a/guzelyurt.html
+++ b/guzelyurt.html
@@ -11,26 +11,14 @@
 
   <body>
     <nav>
+      <i
+        class="fa-solid fa-chevron-left space-right cursor"
+        onclick="javascript:location.href='/index.html'"
+        title="Geri dön"
+      ></i>
       <div class="logo">
-        <ul>
-          <i
-            class="fa-solid fa-chevron-left space-right cursor"
-            onclick="javascript:location.href='/index.html'" title="Geri dön"
-          ></i>
-          <i class="fas fa-hamburger icon-logo"></i>
-          <p>Menü Görmeden</p>
-        </ul>
-      </div>
-
-      <div class="menu">
-        <ul>
-          <button class="raise" onclick="javascript:location.href='#login'">
-            Giriş
-          </button>
-          <button class="raise" onclick="javascript:location.href='#register'">
-            Kayıt
-          </button>
-        </ul>
+        <i class="fas fa-hamburger icon-logo"></i>
+        <p>Menü Görmeden</p>
       </div>
     </nav>
 
@@ -263,6 +251,8 @@
       </div>
     </main>
 
+
     <script src="js/place.js"></script>
+
   </body>
 </html>
