--- a/index.html
+++ b/index.html
@@ -124,37 +124,27 @@
       <br />
 
 
-<!-- The Modal -->
-<div id="id01" class="modal">
+<div id="id01" class="modal-login">
   <span onclick="document.getElementById('id01').style.display='none'"
-class="close" title="Kapat">&times;</span>
-
-  <form class="modal-content">
-   
-
+class="close-login" title="Kapat">&times;</span>
+  <form class="modal-content-login">
     <div class="login-container">
       <label for="uname"><b>Kullanıcı Adı</b></label>
       <input type="text" placeholder="Kullanıcı adını gir" id="uname" required>
       <br>
-
       <label for="psw"><b>Şifre</b></label>
       <input type="password" placeholder="Şifreni gir" id="psw" required>
       <br>
-
       <button type="submit" class="raise" onclick="login()">Giriş Yap</button>
-     
     </div>
-
-   
   </form>
 </div>
 
 
-<div id="id02" class="modal">
+<div id="id02" class="modal-login">
   <span onclick="document.getElementById('id02').style.display='none'"
-class="close" title="Kapat"">&times;</span>
-
-  <form class="modal-content animate" action="/">
+class="close-login" title="Kapat"">&times;</span>
+  <form class="modal-content-login" action="/">
     <div class="login-container">
       <label for="uname"><b>Kullanıcı Adı</b></label>
       <input type="text" placeholder="Kullanıcı adını gir" id="unamer" required>
@@ -163,12 +153,11 @@ class="close" title="Kapat"">&times;</span>
       <input type="password" placeholder="Şifreni gir" id="pswr" required>
       <br>
       <button type="submit" class="raise" onclick="register()">Kayıt Ol</button>
-     
     </div>
-
-   
   </form>
 </div>
+
+
 
 
     </main>
