path bugı düzeltildi

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <article
                class="card"
                style="background-image: url(imgs/emirseyh.png)"
-               onclick="javascript:location.href='/emirseyh.html'"
+               onclick="javascript:location.href='emirseyh.html'"
                >
                <header class="card-header">
                   <h2>Emirşeyh Köftecisi</h2>
@@ -76,7 +76,7 @@
             <article
                class="card"
                style="background-image: url(imgs/guzelyurt.jpg)"
-               onclick="javascript:location.href='/guzelyurt.html'"
+               onclick="javascript:location.href='guzelyurt.html'"
                >
                <header class="card-header">
                   <h2>Güzelyurt Restorant</h2>
@@ -95,7 +95,7 @@
             <article
                class="card"
                style="background-image: url(imgs/erzurumevleri.jpg)"
-               onclick="javascript:location.href='/erzurumevleri.html'"
+               onclick="javascript:location.href='erzurumevleri.html'"
                >
                <header class="card-header">
                   <h2>Erzurum Evleri</h2>
