path bugı düzeltildi

--- a/erzurumevleri.html
+++ b/erzurumevleri.html
@@ -14,7 +14,7 @@
     <nav>
       <i
         class="fa-solid fa-chevron-left space-right cursor"
-        onclick="javascript:location.href='/index.html'"
+        onclick="javascript:location.href='index.html'"
         title="Geri dön"
       ></i>
       <div class="logo">
