--- a/erzurumevleri.html
+++ b/erzurumevleri.html
@@ -3,6 +3,8 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <title>Erzurum Evleri</title>
 
     <style>
       @import url(css/fas.css);
@@ -27,7 +29,7 @@
       <div class="title">
         <h1>Erzurum Evleri</h1>
         <br />
-        <div class="tag button" onclick="openMenuModal()">
+        <div class="tag button" onclick="menuModalAc()">
           <span>Menüyü</span>
           <span>Görmek</span>
           <span> için tıkla </span>
@@ -67,32 +69,32 @@
           <img
             src="imgs/erzurumevleri.jpg"
             style="width: 100%"
-            onclick="openModal();currentSlide(1)"
+            onclick="modelAc();indexBelirt(1)"
             class="card cursor"
           />
 
           <img
             src="imgs/erzurumevleri2.png"
             style="width: 100%"
-            onclick="openModal();currentSlide(2)"
+            onclick="modelAc();indexBelirt(2)"
             class="card cursor"
           />
 
           <img
             src="imgs/erzurumevleri3.png"
             style="width: 100%"
-            onclick="openModal();currentSlide(3)"
+            onclick="modelAc();indexBelirt(3)"
             class="card cursor"
           />
 
           <img
             src="imgs/erzurumevleri4.png"
             style="width: 100%"
-            onclick="openModal();currentSlide(4)"
+            onclick="modelAc();indexBelirt(4)"
             class="card cursor"
           />
         </div>
-        <button class="raise bg-black" onclick="openModal();">
+        <button class="raise bg-black" onclick="modelAc();">
           <span>Tümünü görüntüle</span>
         </button>
       </div>
@@ -184,14 +186,14 @@
       </div>
       <!-- title of the place = emirseyh -->
       <div id="menuModal" class="modal">
-        <span class="close cursor" onclick="closeMenuModal()">&times;</span>
+        <span class="close cursor" onclick="menuModalKapa()">&times;</span>
         <div class="modal-content">
           <img src="imgs/erzurumevlerimenu.jpg" style="width: 100%" />
         </div>
       </div>
 
       <div id="mainModal" class="modal">
-        <span class="close cursor" onclick="closeModal()">&times;</span>
+        <span class="close cursor" onclick="modelKapa()">&times;</span>
         <div class="modal-content">
           <div class="modalSlides">
             <div class="numbertext">1 / 4</div>
@@ -213,15 +215,15 @@
             <img src="imgs/erzurumevleri4.png" style="width: 100%" />
           </div>
 
-          <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-          <a class="next" onclick="plusSlides(1)">&#10095;</a>
+          <a class="prev" onclick="indexArtir(-1)">&#10094;</a>
+          <a class="next" onclick="indexArtir(1)">&#10095;</a>
 
           <div class="column">
             <img
               class="card cursor"
               src="imgs/erzurumevleri.jpg"
               style="width: 100%"
-              onclick="currentSlide(1)"
+              onclick="indexBelirt(1)"
             />
           </div>
           <div class="column">
@@ -229,7 +231,7 @@
               class="card cursor"
               src="imgs/erzurumevleri2.png"
               style="width: 100%"
-              onclick="currentSlide(2)"
+              onclick="indexBelirt(2)"
             />
           </div>
           <div class="column">
@@ -237,7 +239,7 @@
               class="card cursor"
               src="imgs/erzurumevleri3.png"
               style="width: 100%"
-              onclick="currentSlide(3)"
+              onclick="indexBelirt(3)"
             />
           </div>
           <div class="column">
@@ -245,7 +247,7 @@
               class="card cursor"
               src="imgs/erzurumevleri4.png"
               style="width: 100%"
-              onclick="currentSlide(4)"
+              onclick="indexBelirt(4)"
             />
           </div>
         </div>
