--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -3,8 +3,12 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    />
+    <title>Hakkımızda</title>
     <style>
-      @import url(css/fas.css);
       @import url(css/place.css);
       @import url(css/hakkimizda.css);
     </style>
@@ -25,6 +29,7 @@
 
     <main>
       <div class="hakkimizda-box">
+        <i class="fas fa-question"></i>
         <h2>Menü Görmeden nedir ?</h2>
         <p>
           Menü Görmeden kullanıcıların mekanlar hakkındaki düşüncelerini
@@ -33,6 +38,7 @@
         </p>
       </div>
       <div class="hakkimizda-box">
+        <i class="fas fa-question"></i>
         <h2>Menü Görmeden ile ne yapabilirsin ?</h2>
         <ul>
           <li>
@@ -45,6 +51,7 @@
         </ul>
       </div>
       <div class="hakkimizda-box">
+        <i class="fas fa-question"></i>
         <h2>Menü Görmeden puanları ile ne yapabilirsin ?</h2>
         <ul>
           <li>
