--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                   <label for="psw"><b>Şifre</b></label>
                   <input type="password" placeholder="Şifreni gir" id="psw" required>
                   <br>
-                  <button type="submit" class="raise" onclick="login()">Giriş Yap</button>
+                  <button type="submit" class="raise" onclick="return login()">Giriş Yap</button>
                </div>
             </form>
          </div>
