cookie koruması eklendi

--- a/userpage.html
+++ b/userpage.html
@@ -12,6 +12,7 @@
   </head>
 
   <body>
+    <span onshow="checkCookie()" ></span>
     <nav>
       <i
         class="fa-solid fa-chevron-left space-right cursor"
@@ -25,6 +26,6 @@
     </nav>
 
 
-    <script src="js/place.js"></script>
+    <script src="js/userpage.js"></script>
   </body>
 </html>
