--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -58,7 +58,17 @@
           </li>
         </ul>
       </div>
+      <div class="hakkimizda-box">
+        <h2>İletişim</h2>
+        <h2>
+          <a href="mailto:google@google.com" style="font-size: 1.5rem"
+            >Eposta</a
+          >
+        </h2>
+        <h2>
+          <a href="tel:+5555555555" style="font-size: 1.5rem">Telefon</a>
+        </h2>
+      </div>
     </main>
-
   </body>
 </html>
