--- a/userpage.html
+++ b/userpage.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 
-    <title>Hakkımızda</title>
+    <title>Profil</title>
     <style>
       @import url(css/fas.css);
       @import url(css/place.css);
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <span onshow="checkCookie()" ></span>
+    <span onshow="checkCookie()"></span>
     <nav>
       <i
         class="fa-solid fa-chevron-left space-right cursor"
@@ -24,7 +24,42 @@
         <p>Menü Görmeden</p>
       </div>
     </nav>
-
+    <main>
+      <div class="title">
+        <h1>Admin</h1>
+        <img
+          src="imgs/111.jpg"
+          class="circle-avatar"
+          style="width: 250px; height: 250px"
+          alt=""
+        />
+        <br />
+        <br />
+        <div class="point">
+          <div class="point-num">
+            <div class="author-name-prefix">5</div>
+          </div>
+          <span class="fas fa-star starred"></span>
+          <span class="fas fa-star starred"></span>
+          <span class="fas fa-star starred"></span>
+          <span class="fas fa-star starred"></span>
+          <span class="fas fa-star starred"></span>
+        </div>
+        <div class="comment-count" style="float: right; font-size: 2rem">
+          MenüPara : 100
+        </div>
+        <i class="fas fa-comment" style="float: left"></i>
+        <div class="comment-count" style="float: left; font-size: 1.5rem">
+          Yorum sayısı 3
+        </div>
+        
+        <br />
+        <div class="comment-count" style="float: left; font-size: 1.5rem">
+          Beğeni sayısı 12
+        </div>
+        
+      </div>
+    </main>
 
     <script src="js/userpage.js"></script>
   </body>
