--- a/erzurumevleri.html
+++ b/erzurumevleri.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <title>Erzurum Evleri</title>
+    <link rel="icon" href="imgs/favicon.ico">
 
     <style>
       @import url(css/fas.css);
