--- a/guzelyurt.html
+++ b/guzelyurt.html
@@ -4,6 +4,8 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Güzelyurt Restaurant</title>
+    <link rel="icon" href="imgs/favicon.ico">
+
     <style>
       @import url(css/fas.css);
       @import url(css/place.css);
