--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -3,6 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+    <link rel="icon" href="imgs/favicon.ico">
 
     <title>Hakkımızda</title>
     <style>
