--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
       <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <link rel="icon" href="imgs/favicon.ico">
       <title>Menü görneden</title>
       <style>
          @import url(css/fas.css);
