--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <link rel="icon" href="imgs/favicon.ico">
-      <title>Menü görneden</title>
+      <title>Menü gömeden</title>
       <style>
          @import url(css/fas.css);
          @import url(css/style.css);
