instagram sayfası eklendi

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <div class="social">
                <a href="https://www.facebook.com/"><i class="fab fa-facebook-square"></i></a>
                <a href="https://twitter.com/"><i class="fab fa-twitter-square"></i></a>
-               <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+               <a href="https://www.instagram.com/menugormeden/"><i class="fab fa-instagram"></i></a>
                <a href="https://www.youtube.com/"><i class="fab fa-youtube-square"></i></a>
             </div>
             <br>
