--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-    <link rel="icon" href="imgs/favicon.ico">
+    <link rel="icon" href="imgs/favicon.ico" />
 
     <title>Hakkımızda</title>
     <style>
@@ -68,6 +68,11 @@
         </h2>
         <h2>
           <a href="tel:+5555555555" style="font-size: 1.5rem">Telefon</a>
+        </h2>
+        <h2>
+          <a href="https://www.instagram.com/menugormeden/"
+            ><i class="fab fa-instagram" style="font-size: 1.5rem"> instagram</i
+          ></a>
         </h2>
       </div>
     </main>
