--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <div class="detail-header " onclick="javascript:location.href='hakkimizda.html' ">Hakkımızda</div>
             <br>
             <div class="social ">
-               <a href="https://www.facebook.com/ "><i class="fab fa-facebook-square "></i></a>
+               <a href="https://www.facebook.com/Men%C3%BC-G%C3%B6rneden-100634366006010 "><i class="fab fa-facebook-square "></i></a>
                <a href="https://twitter.com/ "><i class="fab fa-twitter-square "></i></a>
                <a href="https://www.instagram.com/menugormeden/ "><i class="fab fa-instagram "></i></a>
                <a href="https://www.youtube.com/ "><i class="fab fa-youtube-square "></i></a>
