kayıt bug çözüldü

--- a/index.html
+++ b/index.html
@@ -122,13 +122,13 @@
             <span onclick="document.getElementById('id02').style.display='none'" class="close-login" title="Kapat" ">&times;</span>
             <form class="modal-content-login " action="/ ">
                <div class="login-container ">
-                  <label for="uname "><b>Kullanıcı Adı</b></label>
-                  <input type="text " placeholder="Kullanıcı adını gir " id="unamer " required>
+                  <label for="unamer"><b>Kullanıcı Adı</b></label>
+                  <input type="text" placeholder="Kullanıcı adını gir" id="unamer" required>
                   <br>
-                  <label for="psw "><b>Şifre</b></label>
-                  <input type="password " placeholder="Şifreni gir " id="pswr " required>
+                  <label for="pswr"><b>Şifre</b></label>
+                  <input type="password" placeholder="Şifreni gir" id="pswr" required>
                   <br>
-                  <button type="submit " class="raise " onclick="register() ">Kayıt Ol</button>
+                  <button type="submit" class="raise " onclick="return register() ">Kayıt Ol</button>
                </div>
             </form>
          </div>
